--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Spartacus</title>
-    <link rel="stylesheet" href="css/spartacus.css">
+    <link rel="stylesheet" href="/css/spartacus.css">
   </head>
   <body>
-      <h1>It lives</h1>
+      <main>
+          <div id="app"></div>
+      </main>
+      <script data-main="/js/main.js" src="/lib/js/requirejs/require.js"></script>
   </body>
 </html>
