--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Spartacus</title>
+    <title>Webpay</title>
     <link rel="stylesheet" href="/css/spartacus.css">
   </head>
   <body>
-      <main>
-          <div id="app"></div>
-      </main>
-      <script data-main="/js/main.js" src="/lib/js/requirejs/require.js"></script>
+    <div id="app"></div>
+    <script data-main="/js/main.js" src="/lib/js/requirejs/require.js"></script>
   </body>
 </html>
